25 MAY 2022
Add loading splash screen, with instructions and progress bar

23 MAY 2022
Added a light as part of the compass rig.
a-entity light="type: spot; color: #FFF; intensity: 0.5; target: #compassface; distance: 0.7; angle: 50; decay: 0.02;" position="0.01 0.5 0.05"
Change alphaTest on crosshair from 0.5 to 0.2 for better render of reticle

22 MAY 2022
Added compass as a 3d model and working dial. 
Removed text azimuth from binocular view. 
Compass dial has a sine error that osolates +/- 1 degree
(C key toggles compass on/off. Spce bar is zoom- bring up bino if compass off, zoom compass dial if compass on.)