@@ -86,3 +86,4 @@
 {"name":"USMA_SSI.png","date":"2022-05-19T14:14:54.743Z","url":"https://cdn.glitch.global/0140ff64-dac6-408d-bf59-c093dd13ad3a/USMA_SSI.png","type":"image/png","size":54335,"imageWidth":200,"imageHeight":200,"thumbnail":"https://cdn.glitch.global/0140ff64-dac6-408d-bf59-c093dd13ad3a/USMA_SSI.png","thumbnailWidth":200,"thumbnailHeight":200,"uuid":"d83K2EVuTPChFJHZ"}
 {"uuid":"d83K2EVuTPChFJHZ","deleted":true}
 {"name":"USMA_SSI.png","date":"2022-05-19T14:20:35.647Z","url":"https://cdn.glitch.global/0140ff64-dac6-408d-bf59-c093dd13ad3a/USMA_SSI.png","type":"image/png","size":53843,"imageWidth":200,"imageHeight":200,"thumbnail":"https://cdn.glitch.global/0140ff64-dac6-408d-bf59-c093dd13ad3a/USMA_SSI.png","thumbnailWidth":200,"thumbnailHeight":200,"uuid":"ADJjygwzsQYMtZAr"}
+{"name":"WPSC_Logo.png","date":"2022-05-26T02:13:12.760Z","url":"https://cdn.glitch.global/0140ff64-dac6-408d-bf59-c093dd13ad3a/WPSC_Logo.png","type":"image/png","size":177814,"imageWidth":1898,"imageHeight":1897,"thumbnail":"https://cdn.glitch.global/0140ff64-dac6-408d-bf59-c093dd13ad3a/thumbnails%2FWPSC_Logo.png","thumbnailWidth":330,"thumbnailHeight":330,"uuid":"97EoDJdAKsxPUe3D"}
